Version 0.23
============
svn://common-lisp.net/project/armedbear/svn/tags/0.23.0/abcl
(????, 2010)

Features
--------

* [svn r12986] Update to ASDF 2.010.1

* [svn r12982] Experimental support for the long form
     of DEFINE-METHOD-COMBINATION

* [svn r12994] New java-interop macros: CHAIN and JMETHOD-LET

Fixes
-----

* [ticket #110][svn r13024,r13026] Fix #\+ in JAR pathnames does not work

* [svn r12995-12997] Changes to generated byte code to prevent JRockit JVM
     from crashing when optimizing it

* Various fixes in order to complete the Maxima test suite without failures

* [ticket #98] THREAD type specifier not exported from the THREADS package

* [svn r12946] Fix CLOS thread-safety

* [svn r12930] Fix non-constantness of constant symbols when using SET

* [svn r12929] Don't throw conditions on floating point underflow
    (fixes Maxima failures)

* [svn r12928] Fix for Java-collections-as-lisp-sequences support

* [svn r12927] Fix for regression to moved threads related symbols

* [ticket #104] SET changes value of symbols defined with DEFCONSTANT

* [ticket #88] Need a predicate to indicate source of compiled version
      ie Java vs Lisp

* [ticket #106] DEFSTRUCT :include with :conc-name creating overwriting
      inherited slot accessors

* [ticket #97] Symbol imported in multiple packages reported multiple
      times by APROPOS

* [ticket #107] Incorrect compilation of (SETF STRUCTURE-REF) expansion

* [ticket #105] DIRECTORY ignores :WILD-INFERIORS

Other
-----

* [svn r12918] Compiler byte code generator cleanup: introduction
      of generic class file writer, elimination of special purpose code
      in the compiler.

* Number of hashtable implementations reduced to 1 (from 5)

* Reduced use of 'synchronized' global hash table access by using
      the java.util.concurrent package

Version 0.22
============
svn://common-lisp.net/project/armedbear/svn/tags/0.22.0/abcl
(September 24, 2010)

Fixes
-----
