@@ -52,8 +52,8 @@ namestrings.")
   "A list of places to look for shell commands.")
 
 (defvar *gnu-tar-program*
-  #-(or :netbsd :freebsd :solaris) "tar"
-  #+(or :netbsd :freebsd :solaris) "gtar"
+  #-(or :netbsd :freebsd :solaris :sunos) "tar"
+  #+(or :netbsd :freebsd :solaris :sunos) "gtar"
   "Path to the GNU tar program")
 
 (eval-when (:compile-toplevel :load-toplevel :execute)
