@@ -16,6 +16,8 @@ Features
 Fixes
 -----
 
+* [ticket #108][svn r13027] Fix download problems with ASDF-INSTALL
+
 * [ticket #110][svn r13024,r13026] Fix #\+ in JAR pathnames does not work
 
 * [svn r12995-12997] Changes to generated byte code to prevent JRockit JVM
